fixes video page1

--- a/TP3/css/page1.css
+++ b/TP3/css/page1.css
@@ -46,7 +46,8 @@ p
 
 video
 {
-	display: none;
+	display: inline-block;
+	visibility: hidden;
 	width: 360px;
 	height: 288px;
 	position: relative;
